# haos-rover

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml
.swarm/: context.md  spec.md
.swarm/evidence/retro-7/: evidence.json
custom_components/rover/: __init__.py  codec.py  commands.py  config_flow.py  const.py  dispatcher.py  ha_bridge.py  handlers.py  manifest.json  options_flow.py  registry.py  rns_transport.py  services.py  services.yaml  state_extractor.py  strings.json
custom_components/rover/translations/: en.json  ru.json
tests/: conftest.py  test_codec.py  test_commands.py  test_const.py  test_dispatcher.py  test_ha_bridge.py  test_handlers.py  test_init.py  test_options_flow.py  test_registry.py  test_rns_transport.py  test_services.py  test_state_extractor.py
