[project]
name = "rover"
version = "0.2.6"
description = "Rover — Remote Over Radio for Home Assistant"
requires-python = ">=3.12"
dependencies = [
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "voluptuous>=0.13",
    "homeassistant>=2024.12",
    "qrcode>=7.0",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["custom_components"]
asyncio_mode = "auto"
